--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -63,18 +63,20 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Interfaces\IClickable.cs" />
+    <Compile Include="Interfaces\ICommand.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Buttons\Button.cs" />
+    <Compile Include="Models\Buttons\ButtonFunction.cs" />
     <Compile Include="Models\Buttons\LastSong.cs" />
     <Compile Include="Models\Buttons\NextSong.cs" />
+    <Compile Include="Models\Buttons\OpenCommand.cs" />
     <Compile Include="Models\Buttons\PauseButton.cs" />
-    <Compile Include="Models\Buttons\PlayButton.cs" />
-    <Compile Include="Models\Buttons\StopButton.cs" />
+    <Compile Include="Models\Buttons\PlayCommand.cs" />
+    <Compile Include="Models\Buttons\StopCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
