--- a/Playground/packages.config
+++ b/Playground/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.WindowsAPICodePack.Core" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.WindowsAPICodePack.Shell" version="1.1.0" targetFramework="net452" />
   <package id="NAudio" version="1.8.1" targetFramework="net452" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net452" />
 </packages>
