--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -76,6 +76,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Exceptions\CustomException.cs" />
     <Compile Include="Interfaces\IExecutable.cs" />
     <Compile Include="Interfaces\IInterpreter.cs" />
     <Compile Include="IO\Command\SelectionChangerCommand.cs" />
