--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -77,7 +77,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Enums\AudioFormats.cs" />
+    <Compile Include="Exceptions\CannotParseCommandException.cs" />
     <Compile Include="Exceptions\CustomException.cs" />
+    <Compile Include="Exceptions\InvalidCommandException.cs" />
     <Compile Include="Interfaces\IExecutable.cs" />
     <Compile Include="Interfaces\IInterpreter.cs" />
     <Compile Include="IO\Command\MediaPlaybackCommand.cs" />
