Added Playground.Model and Playground.DAL layers

--- a/Playground.DAL/Playground.DAL.csproj
+++ b/Playground.DAL/Playground.DAL.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{22E4EC7A-0AE2-4C70-A2FB-DD3E35E2AC64}</ProjectGuid>
+    <ProjectGuid>{55C92314-A867-4194-A0A5-677893F43C5D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Playground.Core</RootNamespace>
-    <AssemblyName>Playground.Core</AssemblyName>
+    <RootNamespace>Playground.DAL</RootNamespace>
+    <AssemblyName>Playground.DAL</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,8 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Song.cs" />
+    <Compile Include="ISongRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SongRepository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Playground.Model\Playground.Model.csproj">
+      <Project>{60B42033-822E-4F2B-9698-79024DE3F500}</Project>
+      <Name>Playground.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
