--- a/Playground/packages.config
+++ b/Playground/packages.config
@@ -4,4 +4,6 @@
   <package id="Microsoft.WindowsAPICodePack.Shell" version="1.1.0" targetFramework="net452" />
   <package id="NAudio" version="1.8.1" targetFramework="net452" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net452" />
+  <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net452" />
+  <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net452" />
 </packages>
