--- a/Playground/packages.config
+++ b/Playground/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="NAudio" version="1.8.2" targetFramework="net452" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net452" />
+  <package id="taglib" version="2.1.0.0" targetFramework="net452" />
   <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net452" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net452" />
 </packages>
