Added ICommand interface with CustomCommand. Added PlayCommand in ViewModel

--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Services\ISongDataService.cs" />
     <Compile Include="Services\SongDataService.cs" />
+    <Compile Include="Utility\CustomCommand.cs" />
     <Compile Include="ViewModel\SongViewModel.cs" />
     <Page Include="ErrorWindow.xaml">
       <SubType>Designer</SubType>
