Added support for Icon packs; Refactored buttons to use MetroStyle Icons;

--- a/Playground/packages.config
+++ b/Playground/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Expression.Blend.Sdk3" version="1.0.1340.1" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net452" />
+  <package id="MahApps.Metro.IconPacks" version="1.9.0" targetFramework="net452" />
   <package id="NAudio" version="1.8.2" targetFramework="net452" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net452" />
   <package id="taglib" version="2.1.0.0" targetFramework="net452" />
