--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -148,11 +148,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="PlayerSkin\blue-sound-wave.jpg" />
     <Resource Include="PlayerSkin\SoundWizard.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="PlayerSkin\bg.jpg" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Playground.DAL\Playground.DAL.csproj">
@@ -165,14 +161,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="PlayerSkin\ButtonIcons\NextSongButtonIcon.png" />
-    <Resource Include="PlayerSkin\ButtonIcons\OpenSongsButtonIcon.png" />
-    <Resource Include="PlayerSkin\ButtonIcons\PauseButtonIcon.png" />
-    <Resource Include="PlayerSkin\ButtonIcons\PlayButtonIcon.png" />
-    <Resource Include="PlayerSkin\ButtonIcons\PlayButtonOffIcon.png" />
-    <Resource Include="PlayerSkin\ButtonIcons\PlayButtonOnIcon.png" />
-    <Resource Include="PlayerSkin\ButtonIcons\PreviousSongButtonIcon.png" />
-    <Resource Include="PlayerSkin\ButtonIcons\StopButtonIcon.png" />
+    <Resource Include="PlayerSkin\header.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
