--- a/Playground.DAL/Playground.DAL.csproj
+++ b/Playground.DAL/Playground.DAL.csproj
@@ -40,9 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ISongRepository.cs" />
+    <Compile Include="IMediaRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SongRepository.cs" />
+    <Compile Include="MediaRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Playground.Model\Playground.Model.csproj">
