--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -78,13 +78,10 @@
     <Compile Include="Extensions\ListExtensions.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Services\FileItem.cs" />
-    <Compile Include="Services\ISongDataService.cs" />
-    <Compile Include="Services\SongDataService.cs" />
+    <Compile Include="Services\IMediaDataService.cs" />
+    <Compile Include="Services\MediaDataService.cs" />
     <Compile Include="Utility\CustomCommand.cs" />
     <Compile Include="Utility\FileLoader.cs" />
-    <Compile Include="VideoWindow.xaml.cs">
-      <DependentUpon>VideoWindow.xaml</DependentUpon>
-    </Compile>
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Page Include="ErrorWindow.xaml">
       <SubType>Designer</SubType>
@@ -107,10 +104,6 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="VideoWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IO\Command\Command.cs" />
