Implement interface for IFileLoader and IFileItem

--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -76,6 +76,8 @@
       <DependentUpon>ErrorWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Extensions\ListExtensions.cs" />
+    <Compile Include="Interfaces\IFileItem.cs" />
+    <Compile Include="Interfaces\IFileLoader.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Services\FileItem.cs" />
     <Compile Include="Services\IMediaDataService.cs" />
