--- a/SoundWizard/SoundWizard.csproj
+++ b/SoundWizard/SoundWizard.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>ErrorWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Extensions\ListExtensions.cs" />
+    <Compile Include="Interfaces\ICommand.cs" />
     <Compile Include="Interfaces\IFileItem.cs" />
     <Compile Include="Interfaces\IFileLoader.cs" />
     <Compile Include="Properties\Annotations.cs" />
